--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
+    
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/numberText"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:background="#616161"
+        android:gravity="center_vertical|end"
+        android:padding="20dp"
+        android:inputType="number"
+        android:text="0"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TableRow
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/cancelButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="C" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/invertButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="+\\-" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/percentageButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="%" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/divideButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="/" />
+        </TableRow>
+
+        <TableRow
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/sevenButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="7" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/eightButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="8" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/nineButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="9" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/multiplicationButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="*" />
+        </TableRow>
+
+        <TableRow
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/fourButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="4" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/fiveButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="5" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/sixButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="6" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/minusButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="-" />
+        </TableRow>
+
+        <TableRow
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/oneButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="1" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/twoButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="2" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/threeButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="3" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/addButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="+" />
+        </TableRow>
+
+        <TableRow
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:layout_weight="2"
+                android:id="@+id/zeroButton"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="0" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/pointButton"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="." />
+
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/calculatorButton"
+                android:id="@+id/resultButton"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="=" />
+        </TableRow>
+    </TableLayout>
+    
+</LinearLayout>
